<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_enter_password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnToggleSecret"
        android:onClick="onToggleSecretClicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_unlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ListView
        android:id="@+id/lvSecretList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToggleSecret" />
    <EditText
        android:id="@+id/txtSecret"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToggleSecret" />

    <ImageButton
        android:id="@+id/imageButton"
        android:onClick="onSettingsClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_settings" />


    <EditText
        android:id="@+id/editSecretName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/label_secret_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editSecretValue"
        app:layout_constraintEnd_toEndOf="@+id/editSecretValue"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <EditText
        android:id="@+id/editSecretValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/label_secret_value"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtStatus"
        app:layout_constraintEnd_toStartOf="@+id/btnAddSecret"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddSecret"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onAddNewSecret"
        android:text="@string/button_add_secret"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editSecretName"></Button>


    <ImageView
        android:id="@+id/imageLock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/editSecretValue"
        app:layout_constraintEnd_toEndOf="@+id/txtSecret"
        app:layout_constraintStart_toStartOf="@+id/txtSecret"
        app:layout_constraintTop_toBottomOf="@+id/btnToggleSecret"
        app:srcCompat="@drawable/ic_secret_locked" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSecret" />


</androidx.constraintlayout.widget.ConstraintLayout>